# isanagi-proto

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
isana/: compiler.py  isa.py  semantic.py  test.py
isana/model/pipeline/: p3.py  p5.py
isana/model/riscv/python/: compiler.py  datatype.py  instruction.py  instructionA.py  instructionB.py  instructionC.py  instructionD.py  instructionF.py  instructionI.py  instructionM.py  instructionQ.py  instructionType.py  instructionV.py  instructionZawrs.py  instructionZfh.py  instructionZicsr.py  instructionZifencei.py  isa.py  memory.py  register.py
isana/model/tinycpu/python/: compiler.py  datatype.py  instruction.py  isa.py  memory.py  register.py
isana/template/llvm/clang/include/clang/Basic/: BuiltinsXpu.def  TargetBuiltins.h
isana/template/llvm/clang/lib/Basic/: CMakeLists.txt  Targets.cpp
isana/template/llvm/lld/ELF/Arch/: Xpu.cpp
isana/template/llvm/llvm/lib/Object/: ELF.cpp
isana/template/llvm/llvm/lib/TargetParser/: Triple.cpp
isana/tool/: callgraph.py  cfg.py  dfg.py  disassembler.py
kodama/: disasm.py  dwarf2.py  dwarf4.py  elf.py
okojo/: dwarf.py  elf.py
test/isana/model/riscv/: test_compiler.py  test_decode.py  test_disassemble.py  test_semantic.py  test_sim_ia.py
test/isana/model/tinycpu/: test_compiler.py  test_decode.py  test_semantic.py  test_test.py
test/kodama/: test_disasm.py  test_graph.py  test_readelf.py
test/kodama/src/: Makefile  test1.c  test2.c
test/okojo/: test_disasm.py  test_graph.py  test_readelf.py
uguisu/: graph.py
(+4 files in other folders)
